# CmakeProjectTemplate

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/Graphic/: CMakeLists.txt
src/Graphic/resources/: main.qml
src/Graphic/src/: QmlApplication.cpp  QmlApplication.hpp  main.cpp
src/Terminal/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/SeveralLib/: CMakeLists.txt
src/libs/SeveralLib/include/SeveralLib/: LibName.hpp
src/libs/SeveralLib/src/: LibName.cpp
